--- a/src/components/category-box/category.css
+++ b/src/components/category-box/category.css
@@ -336,7 +336,7 @@
     position: relative;
     top: 4px;
     padding: 5px;
-    left: -16px;
+    left: -136px;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 1px;
@@ -354,6 +354,8 @@
     bottom: -23px;
     display: flex;
     justify-content: center;
+    font-size: 20px;
+
 
   }
   /*end scroll  */
