--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -68,12 +68,13 @@
 
 /*  */
 .navbar-collapse.collapse.show{
-    background-color: bisque;
+    background-color: rgba(241, 242, 242, 0.963);
     position: fixed;
     width: 26vh;
     right: 0;
     top: 0;
    z-index: 999;
+   border-radius: 5px 0 0 5px;
 }
 #basic-navbar-nav .close{
     position: relative;
@@ -83,6 +84,7 @@
     justify-content: space-between;
     align-items: center;
 }
+
 #basic-navbar-nav .close .close-toggle{
     /* position: relative; */
     left: 0;
@@ -95,6 +97,16 @@
 #basic-navbar-nav .close i{
     padding: 15px;
 }
+#basic-navbar-nav .close i.close{
+    background-color: rgb(254, 254, 254) ;
+    border-radius: 50%;
+    /* display: block; */
+    z-index: 999;
+    
+
+    
+}
+
 
 .navbar-toggler{
     
