--- a/src/components/single-category/header/headerCategory.css
+++ b/src/components/single-category/header/headerCategory.css
@@ -11,7 +11,7 @@
 }
 .headercategory .col-md-9{
   
-    height: 100%;
+    height: 200px;
 }
 .headercategory .col-12 .parent-box{
   
@@ -26,20 +26,25 @@
     background-position: center;
     background-size: cover;
 }
-.headercategory .col-12 .parent-box2 .menu{
-    height: 200px;
+
+.headercategory .col-md-9 .parent-box2 .menu{
+    /* height: 200px; */
     color: #fff;
     /* display: flex; */
     gap: 5px;
     position: relative;
     flex-direction: row;
     top: 94px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .headercategory .col-12 .parent-box2 .menu a{
    padding: 15px 20px;
-   background-color: #00ffff26;
+   background-color: #00ffffc3;
    border-radius: 5px;
    padding: 8px 19px;
+   cursor: pointer;
     margin: 0 6px;
 }
 .headercategory .parent-box {
