--- a/src/components/single-product/price/price.css
+++ b/src/components/single-product/price/price.css
@@ -8,3 +8,136 @@
    justify-content: center;
    align-items:center;
 }
+.price-container .add-countianer {
+   display: flex;
+   justify-content: center;
+   align-items:center;
+}
+.price-container .add-countianer .title-add{
+   background-color: rgb(136, 5, 5);
+   padding: 10px 15px;
+   border-radius:5px ;
+   color: #fff;
+}
+.price-container .add-countianer .box-add{
+ 
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: row;
+    background-color: aliceblue;
+    padding: 10px 15px;
+    gap: 5px;
+}
+.price-container .add-countianer .box-add .inc{
+ 
+ background-color: rgb(180, 187, 187);
+ padding: 5px;
+ border-radius: 5px;
+}
+.price-container .add-countianer .box-add .inc:hover{
+ 
+ background-color: rgb(134, 61, 72);
+ cursor: pointer;
+
+}
+.price-container .add-countianer .box-add .inc i{
+ 
+ font-size: 15px;
+
+}
+.price-container .add-countianer .box-add .input {
+ width: 100px;
+    
+    }
+.price-container .add-countianer .box-add .input input{
+ width: 100%;
+border: none;
+outline: none;
+font-size: 18px;
+
+text-align: center;
+}
+
+/* cart */
+.total-container{
+   width: 90%;
+   /* border: 1px solid; */
+   margin: 0 auto;
+   padding: 10px;
+   background-color: rgb(233, 233, 233);
+}
+.total-container .title{
+
+}
+.total-container .box-total-price{
+
+   background-color: rgb(223, 223, 223);
+   padding: 10px;
+   border-radius: 5px;
+}
+.total-container .box-total-price .box-price{
+
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   gap: 5px;
+   padding: 5px;
+
+}
+
+.price-container .box-img{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.price-container .box-img img{
+   width: 150px;
+   border-radius: 5px;
+}
+.price-container .my-flex{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+
+}
+.price-container .my-flex .offer-code{
+  background-color: rgb(231, 229, 229);
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+
+}
+.price-container .my-flex .offer-code .box{
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  width: 100%;
+  height: 50%;
+
+}
+.price-container .my-flex .offer-code .box span{
+ background-color: rgb(169, 21, 21);
+ padding: 10px 15px;
+ border-radius: 5px;
+ color: #fff;
+ cursor: pointer;
+ /* height: 100%; */
+
+}
+.price-container .my-flex .offer-code .box input{
+padding: 5px 10px ;
+border:none;
+border-radius: 5px;
+text-align: center;
+
+}
+
