--- a/src/components/single-product/price/price.css
+++ b/src/components/single-product/price/price.css
@@ -18,6 +18,7 @@
    padding: 10px 15px;
    border-radius:5px ;
    color: #fff;
+   cursor: pointer;
 }
 .price-container .add-countianer .box-add{
  
