--- a/src/components/single-category/productCard/productCard.css
+++ b/src/components/single-category/productCard/productCard.css
@@ -44,6 +44,11 @@
         width: 16.66666667%;
         margin: 0 !important;
     }
+    .col-lg-3 {
+        flex: 0 0 auto;
+        width: 25%;
+        margin: 0 !important;
+    }
 }
 
 
