--- a/src/components/single-product/price/price.css
+++ b/src/components/single-product/price/price.css
@@ -19,6 +19,9 @@
    border-radius:5px ;
    color: #fff;
    cursor: pointer;
+   width: 100%;
+    display: flex;
+    justify-content: center;
 }
 .price-container .add-countianer .box-add{
  
@@ -89,12 +92,14 @@ text-align: center;
 
 .price-container .box-img{
    width: 100%;
-   display: flex;
+   /* display: flex;
    justify-content: center;
-   align-items: center;
+   align-items: center; */
 }
 .price-container .box-img img{
-   width: 150px;
+   /* width: 150px; */
+   width: 100%;
+   height: 134px;
    border-radius: 5px;
 }
 .price-container .my-flex{
@@ -142,3 +147,67 @@ text-align: center;
 
 }
 
+.g_5{
+   gap:5px;
+}
+
+/* cart */
+
+
+.price-container .title_cart {
+   height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.price-container .title_cart p{
+   font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+
+}
+
+.price-container .border_cart .color_title_cart{
+   display: flex;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: 500;
+} 
+.price-container .color_cart .container_color_cart ul{
+   list-style: none;
+   display: flex;
+   flex-direction: row;
+   gap: 5px;
+   justify-content: center;
+   align-items: center;
+   margin: 0;
+} 
+
+.border_cart{
+   border-bottom: 1px solid;
+   padding-bottom: 2px;
+}
+
+
+/* cart */
+@media (max-width: 992px){
+
+   .border_cart .box-img img{
+      height: 200px;
+   }
+} 
+
+
+.hover_delete_cart:hover{
+   /* color: aqua; */
+   /* animation-name: 'deletee'; */
+   animation: deletee 700ms ease-in infinite;
+   /* animation-timeline: 1s; */
+   cursor: pointer;
+}
+@keyframes deletee {
+   0%{}50%{
+      color: aqua;
+   }
+}
