--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,7 +5,7 @@
 .footer-container{
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: #0d161e;
     color: #fff;
     --bs-gutter-x: 0;
     --bs-gutter-y: 0;
