--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -19,7 +19,7 @@
             align-items: center;
             width: 100%;
             height: 100%;
-            
+            gap: 1px;
             li{
                 display: flex;
                 justify-content: center;
@@ -28,6 +28,29 @@
                 cursor: pointer;
                 width: 100%;
                 height: 6%;
+                border-radius: 4px;
+                // font-size: 20px;
+                font-weight: 600;
+                &.profile{
+                    background-color: #0d161e;
+                    &:hover{
+                        background-color: #ffffff;
+                        // animation-name: profilesidebar;
+                        // animation: name duration timing-function delay iteration-count direction fill-mode;
+                        
+
+                        .icon{
+                            color: #21dbdb;
+                        }
+                        .link_text{
+                            color: #21dbdb;
+                        }
+                    }
+                    
+                    .icon{
+                        color: #00ffff;
+                    }
+                }
                 &:hover{
                     background-color: #4985be;
 
@@ -43,6 +66,7 @@
                     justify-content: center;
                     align-items: center;
                     padding: 18px;
+                    gap: 12px;
                 }
                 .icon{
                     font-size: 28px;
@@ -60,3 +84,4 @@
         }
     }
 }
+
