--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -240,3 +240,10 @@ form .btn .btn-layer{
     justify-content: center;
     align-items: inherit;
   }
+
+  .h{
+    color: "#fff"; cursor: "default";
+  }
+  .s{
+    color: "#000";cursor: "pointer" ;
+  }
