--- a/src/components/checkout/form-buy/formbuy.css
+++ b/src/components/checkout/form-buy/formbuy.css
@@ -1,6 +1,7 @@
 .form-buy .formbuy-container{
     --bs-gutter-x: 0;
     --bs-gutter-y: 0;
+
 }
 .form-buy .formbuy-container .form-container .form{
     --bs-gutter-x: 0;
@@ -8,13 +9,32 @@
     padding: 10px;
     background-color: rgba(255, 255, 255,0.7);
 
-}
-.form-buy .formbuy-container .form-container .form .form-control{
-position: relative;
 
 }
-.form-buy .formbuy-container .form-container .form .form-control:focus  {
+.form-buy .formbuy-container .form-container .form .form_cotrol{
+position: relative;
+display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--bs-body-color);
+    background-color: var(--bs-body-bg);
+    background-clip: padding-box;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    appearance: none;
+    border-radius: var(--bs-border-radius);
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+}
+.form-buy .formbuy-container .form-container .form .form_cotrol:focus  {
     
+    color: var(--bs-body-color);
+    background-color: var(--bs-body-bg);
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
     /* border:2px solid black; */
     border-width: 3px;
     animation: border_ani 2s ease  infinite;
@@ -43,12 +63,15 @@ position: relative;
 .form-buy .formbuy-container .form-container .form .box-dahande{
 /* background-color: rgb(255, 255, 255); */
 /* margin:10px 0; */
-padding:10px 5px;
+padding: 11px 10px;
+
 }
 
 .form-buy .formbuy-container .form-container .form .box-dahande .title{
     font-size: 20px;
     font-weight: 500;
+    display: flex;
+    justify-content: center;
 }
 /*  */
 .form-buy .formbuy-container .form-container .form .box-girandeh {
